@@ -304,7 +304,8 @@ CREATE TABLE documents (
 	numberplanid int(11) NOT NULL DEFAULT '0',
 	extnumber varchar(255) NOT NULL DEFAULT '',
 	cdate int(11) NOT NULL DEFAULT '0',
-        customerid int(11) NOT NULL DEFAULT '0',
+	sdate int(11) NOT NULL DEFAULT '0',
+	customerid int(11) NOT NULL DEFAULT '0',
 	userid int(11) NOT NULL DEFAULT '0',
 	divisionid int(11) NOT NULL DEFAULT '0',
 	name varchar(255) NOT NULL DEFAULT '',
