@@ -430,22 +430,23 @@ DROP TABLE documents CASCADE;
 CREATE TABLE documents (
 	id integer DEFAULT nextval('documents_id_seq'::text) NOT NULL,
 	type smallint		DEFAULT 0 NOT NULL,
-	number integer 		DEFAULT 0 NOT NULL,
+	number integer		DEFAULT 0 NOT NULL,
 	numberplanid integer	DEFAULT 0 NOT NULL,
-	extnumber varchar(255) 	DEFAULT '' NOT NULL,
-	cdate integer 		DEFAULT 0 NOT NULL,
-	customerid integer 	DEFAULT 0 NOT NULL,
+	extnumber varchar(255)	DEFAULT '' NOT NULL,
+	cdate integer		DEFAULT 0 NOT NULL,
+	sdate integer		DEFAULT 0 NOT NULL,
+	customerid integer	DEFAULT 0 NOT NULL,
 	userid integer		DEFAULT 0 NOT NULL,
 	divisionid integer	DEFAULT 0 NOT NULL,
-    	name varchar(255) 	DEFAULT '' NOT NULL,
-    	address varchar(255) 	DEFAULT '' NOT NULL,
+	name varchar(255)	DEFAULT '' NOT NULL,
+	address varchar(255)	DEFAULT '' NOT NULL,
 	zip varchar(10)		DEFAULT '' NOT NULL,
-    	city varchar(32) 	DEFAULT '' NOT NULL,
+	city varchar(32)	DEFAULT '' NOT NULL,
 	countryid integer	DEFAULT 0 NOT NULL,
-	ten varchar(16) 	DEFAULT '' NOT NULL,
-	ssn varchar(11) 	DEFAULT '' NOT NULL,
-    	paytime smallint 	DEFAULT 0 NOT NULL,
-	paytype smallint 	DEFAULT NULL,
+	ten varchar(16)		DEFAULT '' NOT NULL,
+	ssn varchar(11)		DEFAULT '' NOT NULL,
+	paytime smallint	DEFAULT 0 NOT NULL,
+	paytype smallint	DEFAULT NULL,
 	closed smallint		DEFAULT 0 NOT NULL,
 	reference integer	DEFAULT 0 NOT NULL,
 	reason varchar(255)	DEFAULT '' NOT NULL,
