@@ -95,17 +95,17 @@ function invoice_main_form_fill($x,$y,$scale)
 
 function invoice_dates($x,$y)
 {
-    global $invoice,$pdf;
-    $font_size=12;
-    text_align_right($x,$y,$font_size,iconv("UTF-8","ISO-8859-2//TRANSLIT",trans('Settlement date:')).' ');
-    $y=$y-text_align_left($x,$y,$font_size,date("Y/m/d",$invoice['cdate']));
-    text_align_right($x,$y,$font_size,iconv("UTF-8","ISO-8859-2//TRANSLIT",trans('Sale date:')).' ');
-    $y=$y-text_align_left($x,$y,$font_size,date("Y/m/d",$invoice['cdate']));
-    text_align_right($x,$y,$font_size,iconv("UTF-8","ISO-8859-2//TRANSLIT",trans('Deadline:')).' ');
-    $y=$y-text_align_left($x,$y,$font_size,date("Y/m/d",$invoice['pdate']));
-    text_align_right($x,$y,$font_size,iconv("UTF-8","ISO-8859-2//TRANSLIT",trans('Payment type:')).' ');
-    $y=$y-text_align_left($x,$y,$font_size,iconv("UTF-8","ISO-8859-2//TRANSLIT",$invoice['paytypename']));
-    return $y;
+	global $invoice, $pdf;
+	$font_size = 12;
+	text_align_right($x, $y, $font_size, iconv("UTF-8", "ISO-8859-2//TRANSLIT", trans('Settlement date:')).' ');
+	$y = $y - text_align_left($x, $y, $font_size, date("Y/m/d", $invoice['cdate']));
+	text_align_right($x, $y, $font_size, iconv("UTF-8", "ISO-8859-2//TRANSLIT", trans('Sale date:')).' ');
+	$y = $y - text_align_left($x, $y, $font_size, date("Y/m/d", $invoice['sdate']));
+	text_align_right($x, $y, $font_size, iconv("UTF-8", "ISO-8859-2//TRANSLIT", trans('Deadline:')).' ');
+	$y = $y - text_align_left($x, $y, $font_size, date("Y/m/d", $invoice['pdate']));
+	text_align_right($x, $y, $font_size, iconv("UTF-8", "ISO-8859-2//TRANSLIT", trans('Payment type:')).' ');
+	$y = $y - text_align_left($x, $y, $font_size, iconv("UTF-8", "ISO-8859-2//TRANSLIT", $invoice['paytypename']));
+	return $y;
 }
 
 function invoice_buyer($x,$y) 
