@@ -24,7 +24,7 @@
 		</TD>
 		<TD WIDTH="1%" NOWRAP ALIGN="LEFT" VALIGN="TOP" CLASS="sdr">
 			{$invoice.cdate|date_format:"%Y/%m/%d"}{if $invoice.division_cplace neq ""}, {$invoice.division_cplace}{/if}<BR>
-			{$invoice.cdate|date_format:"%Y/%m/%d"}<BR>
+			{$invoice.sdate|date_format:"%Y/%m/%d"}<BR>
 			{$invoice.pdate|date_format:"%Y/%m/%d"}<BR>
 			{$invoice.paytypename}
 		</TD>
