@@ -6,6 +6,7 @@ version ? (????-??-??)
   - BTS#0000862: Fixed bug in SQL query on MySQL [alec]
   - customers: add post name [chilan]
   - receipts: replaced stamp by division/company data [chilan]
+  - documents: added sale date [chilan]
 
 version 1.11.12 Aris (2011-03-18)
 
